tests/snapshots/renderer/fenced_code_inside_list_item.snap
---
source: tests/snapshot_render.rs
assertion_line: 29
description: "1. text\n\n   ```ts\n   const a = 1;\n   ```\n"
---
<ol>
<li><p>text</p>
<pre><code class="language-ts">const a = 1;
</code></pre>
</li>
</ol>
